--- a/app/pages/options.html
+++ b/app/pages/options.html
@@ -10,29 +10,29 @@
       <h1>たまに熱盛が出てしまうchrome extension</h1>
     </header>
 
-    <section>
+    <form>
       <h3>熱盛が表示されてしまう動画の割合</h3>
       <div class="row">
         <label for="atsumoriRate">割合 (0 ~ 1, デフォルトは 0.1 = 10% )</label>
-        <input id="atsumoriRate" placeholder="0.1" type="text" value=""/>
+        <input id="atsumoriRate" placeholder="0.1" type="text" value="" pattern="\d+(\.\d+)?"/>
       </div>
       <h3>謝罪する確率</h3>
       <div class="row">
-        <label for="apologizeRate">確率 (0 ~ 1, デフォルトは 0.5 = 5% )</label>
-        <input id="apologizeRate" placeholder="0.5" type="text" value=""/>
+        <label for="apologizeRate">確率 (0 ~ 1, デフォルトは 0.5 = 50% )</label>
+        <input id="apologizeRate" placeholder="0.5" type="text" value="" pattern="\d+(\.\d+)?"/>
       </div>
-    </section>
+      <button id="save">
+        保存
+      </button>
+      <button id="restore">
+        デフォルトに戻す
+      </button>
 
-    <button id="save">
-      保存
-    </button>
-    <button id="restore">
-      デフォルトに戻す
-    </button>
+      <div id="status">
 
-    <div id="status">
+      </div>
+    </form>
 
-    </div>
 
     <div id="issues">
       <hr />
